--- a/jspbook/src/main/webapp/WEB-INF/web.xml
+++ b/jspbook/src/main/webapp/WEB-INF/web.xml
@@ -1,12 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="https://jakarta.ee/xml/ns/jakartaee" xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_5_0.xsd" id="WebApp_ID" version="5.0">
 	<filter>
-		<filter-name>Filter01</filter-name>
-		<filter-class>chapter12.AuthenFilter</filter-class>
+		<filter-name>Filter02_2</filter-name>
+		<!-- 객체 생성을 알아서 해준다.(자동) -->
+		<filter-class>chapter12.LogFileFilter</filter-class>
+		<init-param>
+			<param-name>filename</param-name>
+			<param-value>c:\\logs\\monitor.log</param-value>
+		</init-param>
 	</filter>
 	<filter-mapping>
-		<filter-name>Filter01</filter-name>
-		<url-pattern>/exam12_1_result</url-pattern>
+		<filter-name>Filter02_2</filter-name>
+		<url-pattern>/exam12_2_controller</url-pattern>
 	</filter-mapping>
 	<error-page>
   		<exception-type>java.lang.Exception</exception-type>
